# easy-error

./: .gitlab-ci.yml  CHANGELOG.adoc  Cargo.toml  LICENSE  README.md
examples/: basic.rs
src/: lib.rs  macros.rs  termination.rs  terminator.rs
